--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.13.3"
+    "@google-cloud/datastore": "^4.2.0",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "fs": "0.0.1-security"
   },
   "repository": {
     "type": "git",
